added links to html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>arrayPlayground</title>
     <script src="./scripts/findAuthor.js"></script>
+    <script src="./scripts/amountOfWords.js"></script>
+    <script src="./scripts/cafe.js"></script>
+    <script src="./scripts/firstWord.js"></script>
+    <script src="./scripts/increaseAmount.js"></script>
+    <script src="./scripts/isMore.js"></script>
+    <script src="./scripts/isPositive.js"></script>
+    <script src="./scripts/oddNumbers.js"></script>
 
 </head>
 <body>
